hphp/hack/test/typecheck/is_expression/softtype.php.exp
File "softtype.php", line 6, characters 13-15:
Soft typehints cannot be used with is-expressions (Parsing[1002])
